# multi-artifact-download

./: .gitmodules  README.md
app/: CMakeLists.txt  golioth_user_config.h  main.c
